--- a/res/config.yaml
+++ b/res/config.yaml
@@ -11,6 +11,7 @@ data_files:
   items: res/data/items.csv
   shopping_cart: res/data/shopping_cart.csv
   orders: res/data/orders.csv
+  promotions: res/data/promotions.csv
 
 # 订单自动化配置
 order_settings:
